--- a/Style.css
+++ b/Style.css
@@ -8,15 +8,15 @@
     border: none;
 }
 .fundo{
-    background-image: url(fundo5.jpg) ;
+    background-image: url(fundo5\ copiar.jpg) ;
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center top;
     width: 100%;
     max-width: 100%;
-    height: 100vh;
-    border-left: solid 60px #052785;
-    border-right: solid 60px #052785;
+    height: 70vh;
+    border-left: solid 50px #052785;
+    border-right: solid 50px #052785;
 }
 header{
     display: flex;
@@ -98,8 +98,8 @@ section h1{
     align-items: center;
     text-align: center;
     font-size: 2rem;
-    border-left: solid 60px #052785;
-    border-right: solid 60px #052785;
+    border-left: solid 50px #052785;
+    border-right: solid 50px #052785;
 }
 
 .container-escolhas{
@@ -108,8 +108,8 @@ section h1{
     flex-wrap: wrap;
     gap: 7rem;
     padding-top: 2rem;
-    border-left: solid 60px #052785;
-    border-right: solid 60px #052785;
+    border-left: solid 50px #052785;
+    border-right: solid 50px #052785;
 }
 
 .cards-escolhas img{
