--- a/registrar.css
+++ b/registrar.css
@@ -89,10 +89,10 @@
     color: #f0ffffde;
 }
 
-.btn-login{
-    width: 50%;
+.login{
+    width: 100%;
     padding: 16px 0px;
-    margin: 15px;
+    margin: 15px 0;
     border: none;
     border-radius: 8px;
     outline: none;
@@ -105,10 +105,19 @@
     box-shadow: 0px 10px 40px -12px #b9dfff73;
 }
 
-.btn-registrar{
+form{
+    width: 100%;
+    box-sizing: border-box;
+}
+
+form.logar{
+    width: 50%;
+    box-sizing: border-box;
+}
+.registro{
     width: 100%;
     padding: 16px 0px;
-    margin: 15px;
+    margin: 15px 0px;
     border: none;
     border-radius: 8px;
     outline: none;
