--- a/style.css
+++ b/style.css
@@ -117,7 +117,7 @@ form.registrar{
 .registro{
     width: 100%;
     padding: 16px 0px;
-    margin: 15px 0px;
+    margin: 15px 0; 
     border: none;
     border-radius: 8px;
     outline: none;
