--- a/Catalogo.css
+++ b/Catalogo.css
@@ -5,23 +5,20 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 body{
-    background-color: #252525;
+    background-color:#E1EBEE;
 }
 .painel /* Topo */ {
-    margin-top: 1%;
     display: flex;
     justify-content: space-evenly;
-    width: 98vw;
-    height: 2.7rem;
-    border-radius: 1.2rem;
-    box-shadow: 10px 10px 10px #00000052;
+    width: 100vw;
+    height: 10vh;
     color: #b9e0ff;
-    background-color: #6b0ac5;
+    background-color:blue;
     align-items: center;
 }  
 
 .painel > div > a{
-    color: #b9e0ff;
+    color: #fff;
     text-decoration: none;
     padding-right: 0.5rem;
     padding-left: 0.5rem;
@@ -32,11 +29,9 @@ body{
     right: 20px;
     top: 30%;
   }
-i{    color: #b9e0ff;}
+i{    color: #fff;}
 
-.painel > div > a:hover{
-    color: #000000;
-}
+
 .painel > div{
     justify-content: center;
     display: flex;
@@ -47,25 +42,30 @@ i{    color: #b9e0ff;}
     position: relative;
 }
 #procurar{
-    border-radius: 2.5rem;
     outline: none;
-    border: none;
-    padding-left: 1%;
+    border: 2px solid rgba(173, 216, 230, 0.479);
+    padding-left: 5%;
     box-shadow: 10px 10px 10px #00000052;
-    font-size: 1rem;background-color: #8645c2;
-    color: #b9e0ff;
+    font-size: 1rem;background-color: rgb(0, 102, 255, 0.45);
+    color: #fff;
     width: 100%;
+    height: 85%;
+    border-radius: 2px;
 }
 
 #procurar::placeholder{
     letter-spacing: 2px;
     font-weight: 800;
-    color: #b9e0ff;
+    color: #fff;
 }
+
+.marca > a > img{
+    width:  35% ;}
+
 .content-container{
     max-width: 1000px;
     margin: 0px auto;
-    background-color: #6b0ac5;
+    background: linear-gradient( 90deg, #E1EBEE 0%, #f0f0f0  20%, #f0f0f0   80%, #E1EBEE 100%);
 }
 
 .produto-container{
@@ -75,10 +75,10 @@ i{    color: #b9e0ff;}
     flex-wrap: wrap;
 }
 .text{
-    margin: 10px 20px;
+    margin: 0px 20px;
     padding-top: 20px;
     border-bottom: 2px black solid;
-    color: #b9e0ff;
+    color: black;
 }
 .produto{
     display: flex;
@@ -88,8 +88,9 @@ i{    color: #b9e0ff;}
     margin: 10px 5px;
     align-items: center;
     position: relative;
-    background-color: #803ac2;
     border-radius: 10px;
+    border: solid 1px black;
+    background-color: #fff;
 }
 
 .produto > img{
@@ -99,12 +100,21 @@ i{    color: #b9e0ff;}
 .produto > a{
     display: -webkit-box;
     max-width: 200px;
-    max-height: 70px;
+    max-height: 37px;
     white-space: wrap;
     overflow: hidden;
     text-overflow: ellipsis;
     -webkit-line-clamp: 2;
 }
+
+a.preço{
+    font-weight: 900;
+    color: blue;
+    position: absolute;
+    left: 30px;
+    bottom: 50px;
+}
+
 
 a.produt{
     text-align: center;
@@ -113,19 +123,38 @@ a.produt{
 }
 
 a.produt:hover{
-    text-decoration: underline;
+    color: rgb(0, 190, 0);
+    font-weight: 600;
 }
 
 a.comprar{
-    padding: 5px 30px;
+    display: flex;
+    padding: 3px 30px;
     border: 1px solid gray;
-    background-color: #b9e0ff;
+    background-color: blue;
     text-decoration: none;
-    color: black;
+    color: #c4c4c4;
     border-radius: 3px;
     position: absolute;
     bottom: 10px;
-    
+    text-transform: uppercase;
+    font-weight: 900;
+    transition: 0.5s;
+    justify-content: flex-start;
+}
+
+a.comprar:hover{
+    padding: 3px 30px;
+    border: 1px solid gray;
+    background-color: rgb(0, 190, 0);
+    text-decoration: none;
+    color: #c4c4c4;
+    border-radius: 3px;
+    position: absolute;
+    bottom: 10px;
+    text-transform: uppercase;
+    font-weight: 900;
+
 }
 
 @media only screen and (max-width:900px){
