--- a/carrinho.css
+++ b/carrinho.css
@@ -2,80 +2,84 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
+}
+body{
+  background: linear-gradient( 90deg, #E1EBEE 0%, #f0f0f0  20%, #f0f0f0   80%, #E1EBEE 100%);
 }
 
-body {
-  background: #8d72e1;
-  font-family: "Lato", sans-serif;
+main{
+  padding: 0px 30px;
 }
 .painel /* Topo */ {
-  margin-top: 1%;
   display: flex;
-  justify-content: space-evenly;
-  width: 98vw;
-  height: 2.7rem;
-  border-radius: 1.2rem;
-  box-shadow: 10px 10px 10px #00000052;
+  justify-content: center;
+  gap: 10%;
+  width: 100vw;
+  height: 10vh;
   color: #b9e0ff;
-  background-color: #6b0ac5;
+  background-color:blue;
   align-items: center;
 }  
 
 .painel > div > a{
-  color: #b9e0ff;
+  display: flex;
+  color: #fff;
   text-decoration: none;
   padding-right: 0.5rem;
   padding-left: 0.5rem;
 }
 
 .lupa {
+  display: none;
   position: absolute;
   right: 20px;
   top: 30%;
 }
-i{    color: #b9e0ff;}
+i{    color: #fff;}
 
-.painel > div > a:hover{
-  color: #000000;
-}
+
 .painel > div{
   justify-content: center;
   display: flex;
 }
-.pesquisa{
+.painel > div .pesquisa{
+  display: none;
   height: 80%;
   width: 40%;
   position: relative;
 }
 #procurar{
-  border-radius: 2.5rem;
+  display: none;
   outline: none;
-  border: none;
-  padding-left: 1%;
+  border: 2px solid rgba(173, 216, 230, 0.479);
+  padding-left: 5%;
   box-shadow: 10px 10px 10px #00000052;
-  font-size: 1rem;background-color: #8645c2;
-  color: #b9e0ff;
+  font-size: 1rem;background-color: rgb(0, 102, 255, 0.45);
+  color: #fff;
   width: 100%;
+  height: 85%;
+  border-radius: 2px;
 }
 
 #procurar::placeholder{
   letter-spacing: 2px;
   font-weight: 800;
-  color: #b9e0ff;
+  color: #fff;
 }
-body > main {
-  background: #8d72e1;
-  padding: 0 30px 30px;
-}
+
+.marca > a > img{
+  width:  35% ;}
 body > main .page-title {
   font-size: 40px;
   padding: 50px 0;
-  text-align: center;
-  color: #b9e0ff;
+  text-align: start;
+  color: black;
 }
 body > main .content {
   display: flex;
-  color: #b9e0ff;
+  color: black;
 }
 body > main .content section {
   flex: 1;
@@ -92,19 +96,18 @@ button {
 table {
   width: 100%;
   border-collapse: collapse;
-  background: #8d72e1;
 }
 table thead tr {
-  border-bottom: 3px solid #b9e0ff;
+  border-bottom: 3px solid black;
 }
 table thead tr th {
   text-align: left;
   padding-bottom: 10px;
   text-transform: uppercase;
-  color: #b9e0ff;
+  color: black;
 }
 table tbody tr {
-  border-bottom: 3px solid #b9e0ff;
+  border-bottom: 3px solid black;
 }
 table tbody tr:last-child {
   border: 0;
@@ -131,14 +134,14 @@ div.product{
 .product .info .name {
   font-size: 20px;
   margin-bottom: 10px;
-  color: #b9e0ff;
+  color: black;
 }
 .product .info .category {
-  color: #b9e0ff;
+  color: black;
 }
 
 .qty {
-  background: #6c4ab5;
+  background: blue;
   display: inline-flex;
   padding: 0 0;
   justify-content: space-around;
@@ -150,6 +153,7 @@ div.product{
 }
 .qty span {
   margin: 0 10px;
+  color: #fff;
 }
 .qty button {
   display: flex;
@@ -159,7 +163,7 @@ div.product{
   padding: 0 5px;
   font-size: 10px;
   height: 100%;
-  color: #b9e0ff;
+  color: #fff;
 }
 .qty button:hover {
   background: #8d72e1;
@@ -175,7 +179,8 @@ div.product{
   align-items: center;
   justify-content: center;
   font-size: 20px;
-  color: #b9e0ff;
+  color: black;
+  display: none;
 }
 .remove:hover {
   background: #8d72e1;
@@ -186,14 +191,14 @@ aside {
 }
 aside .box {
   margin-bottom: 15px;
-  border: 1px solid #6c4ab5;
-  background: #6c4ab5;
-  color: #b9e0ff;
+  border: 1px solid black;
+  background: blue;
+  color: #fff;
 }
 aside .box header {
   padding: 15px 20px;
   font-size: 18px;
-  border-bottom: 1px solid #8d72e1;
+  border-bottom: 1px solid black;
 }
 aside .box .info {
   padding: 20px;
@@ -203,12 +208,13 @@ aside .box .info > div {
   display: flex;
   justify-content: space-between;
   margin-bottom: 10px;
-  color: #b9e0ff;
+  color: #fff;
 }
 aside .box .info > div:last-child {
   margin: 0;
 }
 aside .box .info button {
+  font-weight: 900;
   color: #28a745;
   background: transparent;
   border: 0;
@@ -218,7 +224,7 @@ aside .box .info button {
 }
 aside .box footer {
   padding: 15px 20px;
-  background: #6c4ab5;
+  background: blue;
   font-size: 18px;
   display: flex;
   justify-content: space-between;
@@ -233,6 +239,7 @@ aside > button {
   text-transform: uppercase;
   letter-spacing: 1px;
   font-size: 16px;
+  font-weight: 900;
 }
 aside > button:hover {
   background: #3bc55b;
@@ -244,13 +251,13 @@ aside > button:hover {
   i.gg-profile{display: none;}
   i.gg-shopping-cart{display: none;}
   i.gg-menu{display: none;}
+  body > main .content {
+    display: flex;
+    flex-direction: column;
+    color: black;
+  }
 }
 
 @media only screen and (max-width:700px){
   div.pesquisa{display: none;}
-  body > main .content {
-    display: flex;
-    flex-direction: column;
-    color: #b9e0ff;
-  }
 }
