--- a/login.css
+++ b/login.css
@@ -1,4 +1,4 @@
-  @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap');
 *{
     padding: 0;
     margin: 0;
@@ -12,7 +12,7 @@ a{
 .login-principal{
     width: 100vw;
     height: 100vh;
-    background-color: blue;
+    background-color: rgb(4, 4, 219);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -51,13 +51,14 @@ a{
     align-items: center;
     flex-direction: column;
     padding: 30px 35px;
-    background: #;
+    background: rgb(0, 102, 255, 0.45);
     border-radius: 20px;
     box-shadow: 0px 10px 40px #00000056;
+    position: relative;
 }
 
 .card-login > h1 {
-    color: #b9e0ff;
+    color: #fff;
     font-weight: 800;
 }
 
@@ -75,7 +76,7 @@ a{
     border: none;
     border-radius: 10px;
     padding: 15px;
-    background-color: #8645c2;
+    background-color: rgba(50, 50, 231, 0.651);
     color: #f0ffffde;
     font-size: 12pt;
     box-shadow: 0px 10px 40px #00000056;
@@ -94,6 +95,7 @@ a{
 form{
     width: 100%;
     box-sizing: border-box;
+    padding-bottom: 20px;
 }
 
 .login{
@@ -106,28 +108,33 @@ form{
     text-transform: uppercase;
     font-weight: 800;
     letter-spacing: 3px;
-    color:#7323be;
-    background:#b9e0ff;
+    color:#fff;
+    background:  rgba(50, 50, 231, 0.651);
     cursor: pointer;
-    box-shadow: 0px 10px 40px -12px #b9dfff73;
+    box-shadow: 0px 10px 40px -12px  rgb(84, 84, 221);
     justify-content: center;
 }
 
-.registrar{
+.registrar h5{
     display: flex;
     justify-content: space-evenly;
     width: 100%;
     flex-direction: row;
-    margin: 10px 5px;
-    color: #b9e0ff;
+    margin: 5px 5px;
+    color: #fff;
     letter-spacing: 1px;
     text-decoration: none;
     align-items: center;
 }
 
 .registrar a{
+    width: 100px;
+    justify-content: center;
     text-decoration: none ;
     cursor: pointer;
+    position: absolute;
+    bottom: 34px;
+    right: 34%;
 }
 .registrar a:hover{
     text-decoration: underline ;
@@ -135,8 +142,12 @@ form{
 }
 
 .icone{
+    margin: 1vw 1vw;
     display: flex;
     justify-content: center;
+    position: absolute;
+    bottom: 0;
+    right: 43%;
 }
 
 .icons{
@@ -146,11 +157,11 @@ form{
     justify-content: center;
     align-items: center;
     cursor: pointer;
-    color: #b9e0ff;
+    color: #fff;
 }
 
 a {
-    color: #b9e0ff;
+    color: #fff;
     justify-content: flex-start;
 }
 
