--- a/registrar.css
+++ b/registrar.css
@@ -9,7 +9,7 @@
 .login-principal{
     width: 100vw;
     height: 100vh;
-    background-color: #4f22b1;
+    background-color: rgb(4, 4, 219);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -48,13 +48,13 @@
     align-items: center;
     flex-direction: column;
     padding: 30px 35px;
-    background: #7323be;
+    background: rgb(0, 102, 255, 0.45);
     border-radius: 20px;
     box-shadow: 0px 10px 40px #00000056;
 }
 
 .card-login > h1 {
-    color: #b9e0ff;
+    color: #fff;
     font-weight: 800;
 }
 
@@ -72,7 +72,7 @@
     border: none;
     border-radius: 10px;
     padding: 15px;
-    background-color: #8645c2;
+    background-color: rgba(50, 50, 231, 0.651);
     color: #f0ffffde;
     font-size: 12pt;
     box-shadow: 0px 10px 40px #00000056;
@@ -129,10 +129,10 @@ form.logar{
     text-transform: uppercase;
     font-weight: 800;
     letter-spacing: 3px;
-    color:#7323be;
-    background:#b9e0ff;
+    color:#fff;
+    background: rgba(50, 50, 231, 0.651);
     cursor: pointer;
-    box-shadow: 0px 10px 40px -12px #b9dfff73;
+    box-shadow: 0px 10px 40px -12px rgb(84, 84, 221);
 }
 .icons{
     display: flex;
@@ -141,11 +141,11 @@ form.logar{
     justify-content: center;
     align-items: center;
     cursor: pointer;
-    color: #b9e0ff;
+    color: #fff;
 }
 
 a {
-    color: #b9e0ff;
+    color: #fff;
     justify-content: flex-start;
 }
 
